--- a/index.html
+++ b/index.html
@@ -82,10 +82,8 @@
         we will initially consider Homogeneous mediums. A large component of this goal will require us to research methods
         for implementing this technique but can initially be broken down into an attenuation component and a scattering component.
         It will be imperative that we consider the implementation of this goal with respect to GPU and therefore many unforseen
-        challenges may arise. The following image shows volumetric rendering of a simple model with a single light source.</p>
-    <ul>
-        <li>Include image from PBR</li>
-    </ul>
+        challenges may arise. </p>
+
     <h4>Goal 3: Performance Analysis</h4>
     <p>The primary motivation for looking into raytracing options on the GPU is for performance. By performance, we mean the
         time it takes to raytrace a scene including participating mediums with low noise. To demo our program, we would like
