updated and test

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
 <body class="markdown-body">
     <h1>godRay</h1>
+    <h2>GPU Acceleration of Volumetric Rendering | Isak Karlsson | Noah Pitts</h2>
     <p><a href="./proposal.html">Final Project Proposal</a>
         <a href="./milestone.html">Milestone Report</a>
         <a href="./final.html">Final Report</a></p>
