--- a/index.html
+++ b/index.html
@@ -33,9 +33,15 @@
 <body class="markdown-body">
     <h1>godRay</h1>
     <h2>GPU Acceleration of Volumetric Rendering | Isak Karlsson | Noah Pitts</h2>
-    <p><a href="./proposal.html">Final Project Proposal</a>
+    <div>
+        <a href="./proposal.html">Project Proposal</a>
+    </div>
+    <div>
         <a href="./milestone.html">Milestone Report</a>
-        <a href="./final.html">Final Report</a></p>
+    </div>
+    <div>
+        <a href="./final.html">Final Report</a>
+    </div>
 
 </body>
 
