Added video link.

--- a/milestone.html
+++ b/milestone.html
@@ -914,7 +914,8 @@
 
     <!--LINK TO THE VIDEO HERE-->
     <h2>Video</h2>
-    <p><a href="http://www.linkToOurVideo.com">LINK VIDEO HERE</a></p>
+    <p><a href="https://youtu.be/RcfIy9AkwMY">LINK VIDEO HERE</a></p>
+     <iframe width="560" height="315" src="https://www.youtube.com/embed/RcfIy9AkwMY" frameborder="0" allowfullscreen></iframe> 
     <h2>ACM Template</h2>
     <p>We downloaded and began to look at the ACM template for formatting of the final report (see link below). Most of the
         report is still from the template but will be updated as we continue to move forward.
