--- a/milestone.html
+++ b/milestone.html
@@ -918,9 +918,9 @@
      <iframe width="560" height="315" src="https://www.youtube.com/embed/RcfIy9AkwMY" frameborder="0" allowfullscreen></iframe> 
 
      <h2>Slides</h2>
-     <p><img src="presentation/Slide1.png" width="560px" /></p>
-     <p><img src="presentation/Slide2.png" width="560px" /></p>
-     <p><img src="presentation/Slide3.png" width="560px" /></p>
+     <p><img src="presentation/slides/slide1.png" width="560px" /></p>
+     <p><img src="presentation/slides/slide2.png" width="560px" /></p>
+     <p><img src="presentation/slides/slide3.png" width="560px" /></p>
     <h2>ACM Template</h2>
     <p>We downloaded and began to look at the ACM template for formatting of the final report (see link below). Most of the
         report is still from the template but will be updated as we continue to move forward.
